--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/checkpointFiveBack?serverTimezone=GMT
+spring.datasource.username= checkpointFiveBack
+spring.datasource.password= checkpointFiveBack
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
